Limit failure rate from GridSporkProvider.provide(...)
"ignoreExceptions" in @Provide seems to get annoyed very quickly
(only 10 000 tries) when provided data set is rejected. This gets around
this issue by shrinking the failure rate considerably.